# clibaseapp

./: .gitignore  README.md  demo_app.py  pyproject.toml
docs/: architecture.md  getting_started.md
src/clibaseapp/: __init__.py  app.py  exceptions.py  models.py
src/clibaseapp/core/: __init__.py  bootstrap.py  config.py  dependency_check.py  logger.py  scanner.py  updater.py
src/clibaseapp/services/: __init__.py  browse_service.py  doctor_service.py  sshfs_service.py
src/clibaseapp/ui/: __init__.py  browser.py  components.py  doc_viewer.py  formatter.py  menus.py  theme.py
tests/: conftest.py  test_config.py  test_dynamic_menu.py  test_logger.py  test_logs_menu.py  test_sshfs_service.py  test_updater.py
